# django-chatme

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  architecture.md  main.py  pyproject.toml  run
docs/: conf.py  index.rst
src/: manage.py
src/chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
src/chat/migrations/: 0001_initial.py
src/chat/templates/chat/: index.html  login.html  register.html  room.html
src/chatme/: asgi.py  installed.py  settings.py  urls.py  wsgi.py
src/chatme/settings/: __init__.py  base.py  local.py  prod.py  redis_conf.py
src/chats/: admin.py  consumers.ipynb  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
src/chats/migrations/: 0001_initial.py  0002_alter_chatgroup_table_alter_groupmessages_table.py  0003_alter_chatgroup_table.py  0004_alter_chatgroup_options_alter_groupmessages_options_and_more.py  0005_alter_groupmessages_group.py  0006_alter_groupmessages_author.py
src/chats/templates/chats/: chat.html  chat_message.html
src/core/management/commands/: init_dirs.py
src/home/: urls.py
src/static/chatme/css/: index.css  login.css  register.css  room.css
src/static/chatme/js/chat/: room.js  (+1 more)
src/static/css/: tailwind.css
src/templates/: 404.html  base.html  home.html  layout.html
src/templates/account/: login.html
src/templates/includes/: header.html  messages.html
src/templates/layouts/: blank.html  box.html
src/templates/partials/: email_form.html  username_form.html
src/users/: forms.py  models.py  signals.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
(+6 files in other folders)
