[project]
name = "chatme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "daphne>=4.2.0",
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "django-qstash>=0.1.2",
    "django-redis>=5.4.0",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "sphinx>=8.2.3",
]
