[project]
name = "chatme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.0",
    "dj-database-url>=3.0.0",
    "django>=5.2.2",
    "django-database-url>=1.0.3",
    "django-qstash>=0.1.2",
    "django-redis>=5.4.0",
    "django-redis-sessions>=0.6.2",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "redis>=6.2.0",
    "sphinx>=8.2.3",
]
